Ingress/testing/ingress-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-to-https
spec:
  entryPoints:
  - web
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      Priority: 10
      services:
      - kind: TraefikService
        name: noop@internal
      middlewares:
      - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandydog.nz`) && PathPrefix (`/a`)
      priority: 25
      kind: Rule
      services:
        - name: app-a
          port: 80
      middlewares:
        - name: stripprefix-a
    - match: Host(`sandydog.nz`) && PathPrefix (`/b`)
      priority: 30
      kind: Rule
      services:
        - name: app-b
          port: 80
      middlewares:
        - name: stripprefix-b
  tls:
    secretName: sandydog-nz-cert
